## automake.am
##
## Automake.am for GlassNet src/common
##
##   (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as
##   published by the Free Software Foundation; either version 2 of
##   the License, or (at your option) any later version.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = cmdswitch.cpp cmdswitch.h\
             combobox.cpp combobox.h\
             config.cpp config.h\
             datetime.cpp datetime.h\
             librarymodel.cpp librarymodel.h\
             log.cpp log.h\
             logline.cpp logline.h\
             logmodel.cpp logmodel.h\
             loglistmodel.cpp loglistmodel.h\
             mpeg1decoder.cpp mpeg1decoder.h\
             playerfactory.cpp playerfactory.h\
             profile.cpp profile.h\
             ringbuffer.cpp ringbuffer.h\
             streamplayer.cpp streamplayer.h\
             streamplayer_alsa.cpp streamplayer_alsa.h\
             streamplayer_mme.cpp streamplayer_mme.h\
             tableview.cpp tableview.h\
             transportbutton.cpp transportbutton.h

CLEANFILES = *~\
             *.idb\
             *ilk\
             *.obj\
             *.pdb\
             *.qm\
             moc_*\
             paths.h

MAINTAINERCLEANFILES = *~\
                       *.tar.gz\
                       aclocal.m4\
                       configure\
                       Makefile.in\
                       moc_*
